--- a/Final-Classify.ipynb
+++ b/Final-Classify.ipynb
@@ -412,8 +412,44 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Breakpoint**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import numpy as np\n",
+    "from tensorflow import keras\n",
+    "import tensorflow as tf\n",
+    "import matplotlib.pyplot as plt\n",
+    "import pandas as pd\n",
+    "import seaborn as sns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_data = np.load('train_data.npy')\n",
+    "train_label= np.load('train_label.npy')\n",
+    "\n",
+    "test_data = np.load('test_data.npy')\n",
+    "test_label = np.load('test_label.npy')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -442,7 +478,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 0]\n",
+      " [0 1]\n",
+      " [0 1]\n",
+      " ...\n",
+      " [1 0]\n",
+      " [0 1]\n",
+      " [1 0]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(train_label_mini)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -455,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -463,14 +522,14 @@
     "def build_model():\n",
     "  model = tf.keras.models.Sequential()\n",
     "  model.add(tf.keras.layers.Conv1D(128, (9),activation='relu'))\n",
-    "  model.add(tf.keras.layers.Dropout(0.5))\n",
+    "  model.add(tf.keras.layers.Dropout(0.3))\n",
     "  model.add(tf.keras.layers.MaxPooling1D((2)))\n",
-    "  model.add(tf.keras.layers.Dropout(0.5))\n",
-    "  model.add(tf.keras.layers.Conv1D(128, (7),activation='relu'))\n",
-    "  model.add(tf.keras.layers.Dropout(0.5))\n",
+    "  model.add(tf.keras.layers.Dropout(0.2))\n",
+    "  model.add(tf.keras.layers.Conv1D(64, (7),activation='relu'))\n",
+    "  model.add(tf.keras.layers.Dropout(0.1))\n",
     "  model.add(tf.keras.layers.MaxPooling1D((2)))\n",
-    "  model.add(tf.keras.layers.Dropout(0.5))\n",
-    "  model.add(tf.keras.layers.Conv1D(128, (5),activation='relu'))\n",
+    "  model.add(tf.keras.layers.Dropout(0.1))\n",
+    "  model.add(tf.keras.layers.Conv1D(32, (5),activation='relu'))\n",
     "  model.add(tf.keras.layers.Flatten())\n",
     "  model.add(tf.keras.layers.Dense(2, activation='sigmoid'))\n",
     "  return model\n",
@@ -487,32 +546,125 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "ename": "InternalError",
-     "evalue": "Failed copying input tensor from /job:localhost/replica:0/task:0/device:CPU:0 to /job:localhost/replica:0/task:0/device:GPU:0 in order to run _EagerConst: Dst tensor is not initialized.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mInternalError\u001b[0m                             Traceback (most recent call last)",
-      "\u001b[1;32mz:\\Uni Work\\Final Project 3\\Final Project- Live\\FakeReviewDetect\\Final-Classify.ipynb Cell 28\u001b[0m in \u001b[0;36m2\n\u001b[0;32m      <a href='vscode-notebook-cell:/z%3A/Uni%20Work/Final%20Project%203/Final%20Project-%20Live/FakeReviewDetect/Final-Classify.ipynb#X41sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m train_data \u001b[39m=\u001b[39m train_data\u001b[39m.\u001b[39mreshape(train_data\u001b[39m.\u001b[39mshape[\u001b[39m0\u001b[39m], \u001b[39m871\u001b[39m, \u001b[39m500\u001b[39m)\n\u001b[1;32m----> <a href='vscode-notebook-cell:/z%3A/Uni%20Work/Final%20Project%203/Final%20Project-%20Live/FakeReviewDetect/Final-Classify.ipynb#X41sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m history \u001b[39m=\u001b[39m model\u001b[39m.\u001b[39;49mfit(\n\u001b[0;32m      <a href='vscode-notebook-cell:/z%3A/Uni%20Work/Final%20Project%203/Final%20Project-%20Live/FakeReviewDetect/Final-Classify.ipynb#X41sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m     train_data, \n\u001b[0;32m      <a href='vscode-notebook-cell:/z%3A/Uni%20Work/Final%20Project%203/Final%20Project-%20Live/FakeReviewDetect/Final-Classify.ipynb#X41sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m     train_label, \n\u001b[0;32m      <a href='vscode-notebook-cell:/z%3A/Uni%20Work/Final%20Project%203/Final%20Project-%20Live/FakeReviewDetect/Final-Classify.ipynb#X41sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m     epochs \u001b[39m=\u001b[39;49m \u001b[39m10\u001b[39;49m,\n\u001b[0;32m      <a href='vscode-notebook-cell:/z%3A/Uni%20Work/Final%20Project%203/Final%20Project-%20Live/FakeReviewDetect/Final-Classify.ipynb#X41sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m     batch_size \u001b[39m=\u001b[39;49m \u001b[39m32\u001b[39;49m,\n\u001b[0;32m      <a href='vscode-notebook-cell:/z%3A/Uni%20Work/Final%20Project%203/Final%20Project-%20Live/FakeReviewDetect/Final-Classify.ipynb#X41sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m     validation_split\u001b[39m=\u001b[39;49m\u001b[39m0.3\u001b[39;49m,\n\u001b[0;32m      <a href='vscode-notebook-cell:/z%3A/Uni%20Work/Final%20Project%203/Final%20Project-%20Live/FakeReviewDetect/Final-Classify.ipynb#X41sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m ) \n",
-      "File \u001b[1;32mc:\\Users\\Christian Gauthier\\miniconda3\\envs\\tf\\lib\\site-packages\\keras\\utils\\traceback_utils.py:70\u001b[0m, in \u001b[0;36mfilter_traceback.<locals>.error_handler\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m     67\u001b[0m     filtered_tb \u001b[39m=\u001b[39m _process_traceback_frames(e\u001b[39m.\u001b[39m__traceback__)\n\u001b[0;32m     68\u001b[0m     \u001b[39m# To get the full stack trace, call:\u001b[39;00m\n\u001b[0;32m     69\u001b[0m     \u001b[39m# `tf.debugging.disable_traceback_filtering()`\u001b[39;00m\n\u001b[1;32m---> 70\u001b[0m     \u001b[39mraise\u001b[39;00m e\u001b[39m.\u001b[39mwith_traceback(filtered_tb) \u001b[39mfrom\u001b[39;00m \u001b[39mNone\u001b[39m\n\u001b[0;32m     71\u001b[0m \u001b[39mfinally\u001b[39;00m:\n\u001b[0;32m     72\u001b[0m     \u001b[39mdel\u001b[39;00m filtered_tb\n",
-      "File \u001b[1;32mc:\\Users\\Christian Gauthier\\miniconda3\\envs\\tf\\lib\\site-packages\\tensorflow\\python\\framework\\constant_op.py:102\u001b[0m, in \u001b[0;36mconvert_to_eager_tensor\u001b[1;34m(value, ctx, dtype)\u001b[0m\n\u001b[0;32m    100\u001b[0m     dtype \u001b[39m=\u001b[39m dtypes\u001b[39m.\u001b[39mas_dtype(dtype)\u001b[39m.\u001b[39mas_datatype_enum\n\u001b[0;32m    101\u001b[0m ctx\u001b[39m.\u001b[39mensure_initialized()\n\u001b[1;32m--> 102\u001b[0m \u001b[39mreturn\u001b[39;00m ops\u001b[39m.\u001b[39;49mEagerTensor(value, ctx\u001b[39m.\u001b[39;49mdevice_name, dtype)\n",
-      "\u001b[1;31mInternalError\u001b[0m: Failed copying input tensor from /job:localhost/replica:0/task:0/device:CPU:0 to /job:localhost/replica:0/task:0/device:GPU:0 in order to run _EagerConst: Dst tensor is not initialized."
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/10\n",
+      "22/22 [==============================] - 12s 161ms/step - loss: 0.4486 - accuracy: 0.7771 - val_loss: 0.2640 - val_accuracy: 0.9200\n",
+      "Epoch 2/10\n",
+      "22/22 [==============================] - 1s 47ms/step - loss: 0.2460 - accuracy: 0.9057 - val_loss: 0.3589 - val_accuracy: 0.8500\n",
+      "Epoch 3/10\n",
+      "22/22 [==============================] - 1s 43ms/step - loss: 0.1985 - accuracy: 0.9114 - val_loss: 0.1990 - val_accuracy: 0.9167\n",
+      "Epoch 4/10\n",
+      "22/22 [==============================] - 1s 41ms/step - loss: 0.1124 - accuracy: 0.9557 - val_loss: 0.1020 - val_accuracy: 0.9700\n",
+      "Epoch 5/10\n",
+      "22/22 [==============================] - 1s 42ms/step - loss: 0.0712 - accuracy: 0.9757 - val_loss: 0.1292 - val_accuracy: 0.9433\n",
+      "Epoch 6/10\n",
+      "22/22 [==============================] - 1s 43ms/step - loss: 0.0330 - accuracy: 0.9857 - val_loss: 0.1317 - val_accuracy: 0.9367\n",
+      "Epoch 7/10\n",
+      "22/22 [==============================] - 1s 43ms/step - loss: 0.0269 - accuracy: 0.9914 - val_loss: 0.1796 - val_accuracy: 0.9300\n",
+      "Epoch 8/10\n",
+      "22/22 [==============================] - 1s 44ms/step - loss: 0.0381 - accuracy: 0.9857 - val_loss: 0.1525 - val_accuracy: 0.9333\n",
+      "Epoch 9/10\n",
+      "22/22 [==============================] - 1s 39ms/step - loss: 0.0202 - accuracy: 0.9914 - val_loss: 0.0346 - val_accuracy: 0.9867\n",
+      "Epoch 10/10\n",
+      "22/22 [==============================] - 1s 38ms/step - loss: 0.0341 - accuracy: 0.9900 - val_loss: 0.0674 - val_accuracy: 0.9733\n"
      ]
     }
    ],
    "source": [
-    "train_data = train_data.reshape(train_data.shape[0], 871, 500)\n",
     "history = model.fit(\n",
-    "    train_data, \n",
-    "    train_label, \n",
+    "    train_data_mini, \n",
+    "    train_label_mini, \n",
     "    epochs = 10,\n",
     "    batch_size = 32,\n",
     "    validation_split=0.3,\n",
     ") "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "47/47 - 3s - loss: 0.0859 - accuracy: 0.9700 - 3s/epoch - 69ms/step\n",
+      "Test score: 0.08588975667953491\n",
+      "Test accuracy: 0.9700000286102295\n"
+     ]
+    }
+   ],
+   "source": [
+    "score, acc = model.evaluate(test_data, test_label, verbose=2)\n",
+    "print('Test score:', score)\n",
+    "print('Test accuracy:', acc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1/1 [==============================] - 0s 25ms/step\n",
+      "[[0.02165707 0.9794042 ]]\n",
+      "[[0 1]]\n",
+      "*******\n",
+      "1/1 [==============================] - 0s 24ms/step\n",
+      "[[0.7820984  0.20605727]]\n",
+      "[[1 0]]\n",
+      "*******\n",
+      "1/1 [==============================] - 0s 25ms/step\n",
+      "[[0.9691758  0.11756897]]\n",
+      "[[1 0]]\n",
+      "*******\n",
+      "1/1 [==============================] - 0s 25ms/step\n",
+      "[[0.7714792  0.49747628]]\n",
+      "[[1 0]]\n",
+      "*******\n",
+      "1/1 [==============================] - 0s 24ms/step\n",
+      "[[0.06119137 0.96922696]]\n",
+      "[[0 1]]\n",
+      "*******\n",
+      "1/1 [==============================] - 0s 24ms/step\n",
+      "[[0.03065663 0.98833585]]\n",
+      "[[0 1]]\n",
+      "*******\n",
+      "1/1 [==============================] - 0s 24ms/step\n",
+      "[[0.02175694 0.98077285]]\n",
+      "[[0 1]]\n",
+      "*******\n",
+      "1/1 [==============================] - 0s 25ms/step\n",
+      "[[0.02154815 0.97997427]]\n",
+      "[[0 1]]\n",
+      "*******\n",
+      "1/1 [==============================] - 0s 24ms/step\n",
+      "[[0.01725633 0.99079764]]\n",
+      "[[0 1]]\n",
+      "*******\n",
+      "1/1 [==============================] - 0s 25ms/step\n",
+      "[[0.02771874 0.9763532 ]]\n",
+      "[[0 1]]\n",
+      "*******\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range (10):\n",
+    "    x = 456+i\n",
+    "    print(model.predict(test_data[x:x+1]))\n",
+    "    print(test_label[x:x+1])\n",
+    "    print('*******')"
    ]
   }
  ],
