--- a/Final-Classify.ipynb
+++ b/Final-Classify.ipynb
@@ -125,7 +125,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Standardization and spell check\n",
+    "#Normalization and spell check\n",
     "import itertools\n",
     "import re\n",
     "from autocorrect import Speller\n",
@@ -144,7 +144,7 @@
     "    return ans\n",
     "\n",
     "\n",
-    "def standardize_text(text):\n",
+    "def normalize_text(text):\n",
     "    #Remove unicode characters\n",
     "    text = re.sub(r\"(@\\[A-Za-z0-9]+)|([^0-9A-Za-z \\t])|(\\w+:\\/\\/\\S+)|^rt|http.+?\", \"\", text)\n",
     "    #Turn to lower case\n",
@@ -183,7 +183,7 @@
    "outputs": [],
    "source": [
     "full_reviews['text'] = full_reviews['text'].apply(correct_text)\n",
-    "full_reviews['text'] = full_reviews['text'].apply(standardize_text)\n",
+    "full_reviews['text'] = full_reviews['text'].apply(normalize_text)\n",
     "full_reviews['text'] = full_reviews['text'].apply(lemm_text)\n",
     "full_reviews['text'] = full_reviews['text'].apply(remove_spacing)\n",
     "\n",
@@ -285,7 +285,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load Pretrained Word2Vec\n",
+    "#Load Pretrained Word2Vec\n",
     "import tensorflow_hub as hub\n",
     "embed = hub.load('Embed')"
    ]
