--- a/gpt2-generator-larger.ipynb
+++ b/gpt2-generator-larger.ipynb
@@ -19,14 +19,15 @@
     }
    ],
    "source": [
-    "#Import dependancies\n",
+    "#Imports\n",
     "import tensorflow as tf\n",
     "from transformers import TFGPT2LMHeadModel, GPT2Tokenizer\n",
     "from sklearn.utils import shuffle\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "tokenizer = GPT2Tokenizer.from_pretrained('gpt2') #Encoder text to tensor\n",
+    "#Encoder text to tensor\n",
+    "tokenizer = GPT2Tokenizer.from_pretrained('gpt2') \n",
     "model = TFGPT2LMHeadModel.from_pretrained('gpt2', pad_token_id=tokenizer.eos_token_id) "
    ]
   },
@@ -65,9 +66,8 @@
    "source": [
     "#Get Yelp dataset and normalize \n",
     "reviews = pd.read_csv('bigreviews.csv')\n",
-    "#reviews = shuffle(reviews) remove shuffle\n",
     "\n",
-    "#normalize\n",
+    "#Normalization\n",
     "for column in reviews:\n",
     "    reviews['text'] = reviews['text'].str.lower()   #Covert the text to lower case\n",
     "    reviews['text'].str.replace('[^\\w\\s]','') #Remove punctuation\n",
@@ -274,7 +274,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Check Resuls**"
+    "**Check Results**"
    ]
   },
   {
@@ -287,14 +287,6 @@
     "plot_loss()\n",
     "early_stopping_epoch = np.argmax(history.history[\"accuracy\"])+1\n",
     "print(early_stopping_epoch)"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Smooth Graphs, lets keep going"
    ]
   },
   {
@@ -1245,8 +1237,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Sixth Segment*\n",
-    "I see empty dataframes"
+    "*Sixth Segment*"
    ]
   },
   {
