--- a/gpt2-generator-larger.ipynb
+++ b/gpt2-generator-larger.ipynb
@@ -94,14 +94,8 @@
    "metadata": {},
    "source": [
     "**Method**\n",
-    "From attempts to run the model as a whole, have had issues trying to run the large model and save weights due to the time to run epochs along with saving the dataframe, in attempt will train large model in chunks of 35k at a time and run the model using saved weights\n",
     "\n",
-    "\n",
-    "Trying to get model to work initially, issues with getting the model to accurately predict the last tokens from the input on larger 50k scale. Model accuracy is growing at a very slow rate between epoch, trying new medium sized gpt2 models with 35k and removing optimizer. 35k ----> 25k\n",
-    "\n",
-    "Next, trying to go large model, using 50k chunks, implement back optimizer\n",
-    "\n",
-    "Scrap all that, using initial iteration, lower amount of review samples being passed (35k), using 12 batch size 100 block, will move on shifts of 35k every 20 or so epoch"
+    "From attempts to run the model as a whole, have had issues trying to run the large model and save weights due to the time to run epochs along with saving the dataframe, in attempt will train large model in chunks of 35k at a time and run the model using saved weights"
    ]
   },
   {
@@ -127,28 +121,27 @@
    "outputs": [],
    "source": [
     "def datasetCreate(string_tokenized):\n",
-    "  # Define variables to store the data\n",
+    "  #Define variables to store the data\n",
     "  revs = []\n",
     "  inputs, labels = [], [] \n",
     "  block_size = 100\n",
     "  BATCH_SIZE = 12 \n",
     "  BUFFER_SIZE = 1000\n",
-    "  # Split the string_tokenized list into blocks of size block_size\n",
-    "  # store each block in the examples list\n",
+    "  #Split the string_tokenized list into blocks of size block_size\n",
+    "  #store each block in the examples list\n",
     "  for i in range(0, len(string_tokenized) - block_size + 1, block_size):\n",
     "    revs.append(string_tokenized[i:i + block_size])\n",
     "\n",
     "\n",
-    "  # For each review in the ist, store the input as the example without the last part\n",
-    "  # store the label as the review without the first part\n",
+    "  #For each review in the ist, store the input as the example without the last part\n",
     "  for rev in revs:\n",
     "    inputs.append(rev[:-1])\n",
     "    labels.append(rev[1:])\n",
     "\n",
-    "  # Create a dataset from the inputs and labels tensors\n",
+    "  #Create a dataset from the inputs and labels \n",
     "  dataset = tf.data.Dataset.from_tensor_slices((inputs, labels))\n",
     "\n",
-    "  # Shuffle the dataset and batch it\n",
+    "  #Shuffle the dataset and batch\n",
     "  dataset = dataset.shuffle(BUFFER_SIZE).batch(BATCH_SIZE, drop_remainder=True)\n",
     "  return dataset"
    ]
@@ -174,12 +167,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Compiler\n",
     "def modelcompile(model):    \n",
-    "    # definining loss function\n",
     "    loss = tf.keras.losses.SparseCategoricalCrossentropy(from_logits=True)\n",
-    "    # defining our metric which we want to observe\n",
     "    metric = tf.keras.metrics.SparseCategoricalAccuracy('accuracy')\n",
-    "    # compiling the model\n",
     "    model.compile(loss=[loss],optimizer='adam',metrics=[metric])"
    ]
   },
