--- a/Final-Classify.ipynb
+++ b/Final-Classify.ipynb
@@ -5,9 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Classification**\n",
-    "\n",
-    "Now that the fake reviews have been generated using the re-trained gpt2 model, its time to prepare the datasets for final use within the classification model; this is done through standardizing the data and then tokenisation. "
+    "**Classification**"
    ]
   },
   {
