--- a/Final-Classify.ipynb
+++ b/Final-Classify.ipynb
@@ -134,7 +134,7 @@
     "\n",
     "\n",
     "def correct_text(text):\n",
-    "    #One letter in a word should not be present more than twice in continuation\n",
+    "    #One letter in a word should not be present more than three times in continuation\n",
     "    text_correction = ''.join(''.join(s)[:3] for _, s in itertools.groupby(text))\n",
     "    #Apply autocorrection to the corrected text\n",
     "    spell = Speller(lang='en')\n",
