--- a/MiniLSTMClassify.ipynb
+++ b/MiniLSTMClassify.ipynb
@@ -170,7 +170,7 @@
     "labels = df['deceptive'].values\n",
     "\n",
     "#Split the data into test and train data with a 80/20 split, with 80% going to the train data\n",
-    "test_data, train_data, test_label, train_label = train_test_split(text_data,labels, test_size = 0.8, random_state = 0)\n",
+    "test_data, train_data, test_label, train_label = train_test_split(text_data,labels, test_size = 0.2, random_state = 0)\n",
     "\n",
     "print(len(test_data))"
    ]
@@ -1662,7 +1662,7 @@
     "  model.add(tf.keras.layers.Dense(16, activation='relu',\n",
     "                                  kernel_regularizer=regularizers.l2(regularization_lambda),\n",
     "                                  bias_regularizer=regularizers.l2(regularization_lambda))),                                                                                   \n",
-    "  model.add(tf.keras.layers.Dense(2, activation='sigmoid'))\n",
+    "  model.add(tf.keras.layers.Dense(1, activation='sigmoid'))\n",
     "  return model\n",
     "\n",
     "\n",
@@ -2239,7 +2239,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15 (main, Nov 24 2022, 14:39:17) [MSC v.1916 64 bit (AMD64)]"
+   "version": "3.9.15"
   },
   "orig_nbformat": 4,
   "vscode": {
