--- a/CnnClassify.ipynb
+++ b/CnnClassify.ipynb
@@ -53,15 +53,21 @@
    "source": [
     "test1:\n",
     "200 epoch, 30 batch,\n",
+    "\n",
     "Run1:  Conv1d 32 unit layer (3) kernel + regularization 0.008; Test score: 0.9921711087226868 Test accuracy: 0.675000011920929\n",
+    "\n",
     "Run2:  Increase amount of conv1d to 3, 9/7/5 kernel sizes with 128 filter, remove regularization, implement dropout between conv layers and max pool at 0.2, poolsize 2: stuck at val_accuracy: 0.5469\n",
     "\n",
     "retraining up to best validation accuracy epoch :\n",
     "\n",
     "Run3: remove dense layer at end, val_accuracy: 0.7500, loss tend to zero, next run implement regularization \n",
+    "\n",
     "Run4: regularization l2 on conv1d, 0.008, val_accuracy: 0.5469 stuck\n",
+    "\n",
     "Run5: reduce regular to 0.001, stuck again val_accuracy: 0.5469\n",
+    "\n",
     "run6: tweaking all reg values individually starting from first layer only, stuck again \n",
+    "\n",
     "run7: remove all the regularization, increase dropout to 0.5 between layer, Test score: 0.8016452789306641 Test accuracy: 0.768750011920929 "
    ]
   },
@@ -84,7 +90,7 @@
     "  model.add(tf.keras.layers.Dropout(0.5))\n",
     "  model.add(tf.keras.layers.Conv1D(128, (5),activation='relu'))\n",
     "  model.add(tf.keras.layers.Flatten())\n",
-    "  model.add(tf.keras.layers.Dense(2, activation='sigmoid'))\n",
+    "  model.add(tf.keras.layers.Dense(1, activation='sigmoid'))\n",
     "  return model\n",
     "\n",
     "model = build_model()\n",
@@ -833,7 +839,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15 (main, Nov 24 2022, 14:39:17) [MSC v.1916 64 bit (AMD64)]"
+   "version": "3.9.15"
   },
   "orig_nbformat": 4,
   "vscode": {
