--- a/Final-Classify.ipynb
+++ b/Final-Classify.ipynb
@@ -800,6 +800,16 @@
     "    print('Real:',test_label[x:x+1])\n",
     "    print('*******')"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Testing + Analysis**\n",
+    "\n",
+    "Test 1: Limit to first 150 characters"
+   ]
   }
  ],
  "metadata": {
