--- a/Final-Classify.ipynb
+++ b/Final-Classify.ipynb
@@ -800,16 +800,6 @@
     "    print('Real:',test_label[x:x+1])\n",
     "    print('*******')"
    ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Testing + Analysis**\n",
-    "\n",
-    "Test 1: Limit to first 150 characters"
-   ]
   }
  ],
  "metadata": {
@@ -830,7 +820,12 @@
    "pygments_lexer": "ipython3",
    "version": "3.9.15"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "9396d7d05074184ad1bdffa89c9baf4b70aedb99cfe5c454adbba107973e00ee"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
